--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
-  "author": "",
+  "author": "Pavel Zajtsev",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
