--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "author": "Pavel Zajtsev",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/express-validator": "^3.0.0",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.6",
+    "@types/validator": "^13.12.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
@@ -22,7 +28,17 @@
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
+    "@types/express-winston": "^4.0.0",
+    "bcrypt": "^5.1.1",
+    "celebrate": "^15.0.3",
     "express": "^4.19.2",
-    "mongoose": "^8.4.3"
+    "express-validator": "^7.1.0",
+    "express-winston": "^4.2.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.3",
+    "morgan": "^1.10.0",
+    "validator": "^13.12.0",
+    "winston": "^3.13.0"
   }
 }
