--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/express-winston": "^4.0.0",
     "bcrypt": "^5.1.1",
     "celebrate": "^15.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "express-winston": "^4.2.0",
