--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@types/express-winston": "^4.0.0",
